kubernetes/kerberos-factory/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factory
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: factory
    spec:
      containers:
      - name: factory
        image: "kerberos/factory:1.0.669719463"
        #imagePullPolicy: Always
        ports:
          - containerPort: 80
          - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: factory
  labels:
    app: factory
spec:
  ports:
  - port: 80
    targetPort: 80
    name: frontend
    protocol: TCP
  - port: 8082
    name: backend
    targetPort: 8082
    protocol: TCP
  selector:
    app: factory
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factory
  annotations:
    kubernetes.io/ingress.class: traefik
    #kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: factory.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: factory
            port: 
              number: 80
  - host: api.factory.domain.com # myfactoryapi-factorydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: factory
            port: 
              number: 8082
